# tnorms

./: CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml
examples/: aggregation_recipe.rs  logic_table.rs
src/: formulas.rs  lib.rs  operators.rs  ordinal.rs  tests.rs
