[package]
name = "tnorms"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "T-norm and t-conorm families"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/tnorms"
homepage = "https://github.com/arclabs561/tnorms"
documentation = "https://docs.rs/tnorms"
readme = "README.md"
keywords = ["fuzzy-logic", "tnorm", "tconorm", "logic"]
categories = ["algorithms", "science", "mathematics"]
include = ["/src/**/*.rs", "/Cargo.toml", "/CHANGELOG.md", "/LICENSE-*", "/README.md"]

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]
burn = ["std", "dep:burn", "burn/std", "burn/autodiff"]
burn-ndarray = ["burn", "dep:burn-ndarray"]

[dependencies]
burn = { version = "0.20", optional = true, default-features = false }
burn-ndarray = { version = "0.20", features = ["rayon"], optional = true }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
lowdisc = "0.1.1"
proptest = "1.5"

[package.metadata.docs.rs]
all-features = true
